Fixed, footer mobile message compoenent z-index problem

--- a/src/components/FooterMobileMessage/FooterMobileMessage.sass
+++ b/src/components/FooterMobileMessage/FooterMobileMessage.sass
@@ -7,6 +7,7 @@
   text-align: center
   background: url(../../assets/sidebar-bg-sea.jpg) center no-repeat
   padding: .3em
+  z-index: 9
 
   a
     color: #FFF
